--- a/FirebaseStarterApp/View/FeatureView.xib
+++ b/FirebaseStarterApp/View/FeatureView.xib
@@ -9,41 +9,41 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeatureView" customModule="FirebaseStarterApp" customModuleProvider="target">
             <connections>
-                <outlet property="SliderCantidad" destination="OhB-la-njr" id="hqh-8h-uYM"/>
-                <outlet property="SliderFecha" destination="qr9-fa-11M" id="TIo-B6-uE3"/>
-                <outlet property="SliderFoto" destination="TWw-ee-Uto" id="7Qa-MM-JDM"/>
-                <outlet property="SliderMensaje" destination="1u0-ME-ZJr" id="b3m-im-GNZ"/>
-                <outlet property="Titulo" destination="bj6-Gf-IgW" id="dWT-oz-0zz"/>
-                <outlet property="featureView" destination="JTt-Bz-ryR" id="wiL-dP-p5N"/>
+                <outlet property="FeatureView" destination="JTt-Bz-ryR" id="TNF-cN-oAi"/>
+                <outlet property="SliderCantidad" destination="OhB-la-njr" id="KxM-Zt-dQM"/>
+                <outlet property="SliderFecha" destination="qr9-fa-11M" id="eBJ-yg-BqP"/>
+                <outlet property="SliderFoto" destination="TWw-ee-Uto" id="2kD-Rj-msB"/>
+                <outlet property="SliderMensaje" destination="1u0-ME-ZJr" id="fpM-g7-tov"/>
+                <outlet property="Titulo" destination="bj6-Gf-IgW" id="ohb-wa-gj6"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="JTt-Bz-ryR">
+        <view contentMode="scaleToFill" id="JTt-Bz-ryR" customClass="FeatureView" customModule="FirebaseStarterApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bj6-Gf-IgW">
-                    <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bj6-Gf-IgW">
+                    <rect key="frame" x="0.0" y="0.0" width="44" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OhB-la-njr">
-                    <rect key="frame" x="315" y="0.0" width="60" height="30"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OhB-la-njr">
+                    <rect key="frame" x="315" y="0.0" width="44" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1u0-ME-ZJr">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1u0-ME-ZJr">
                     <rect key="frame" x="139" y="98" width="220" height="82"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qr9-fa-11M">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qr9-fa-11M">
                     <rect key="frame" x="275" y="47" width="85" height="43"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
