--- a/FirebaseStarterApp/View/FeatureView.xib
+++ b/FirebaseStarterApp/View/FeatureView.xib
@@ -9,7 +9,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeatureView" customModule="FirebaseStarterApp" customModuleProvider="target">
             <connections>
-                <outlet property="FeatureView" destination="JTt-Bz-ryR" id="TNF-cN-oAi"/>
                 <outlet property="SliderCantidad" destination="OhB-la-njr" id="KxM-Zt-dQM"/>
                 <outlet property="SliderFecha" destination="qr9-fa-11M" id="eBJ-yg-BqP"/>
                 <outlet property="SliderFoto" destination="TWw-ee-Uto" id="2kD-Rj-msB"/>
@@ -18,7 +17,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="JTt-Bz-ryR" customClass="FeatureView" customModule="FirebaseStarterApp" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="FeatureView" id="JTt-Bz-ryR" customClass="FeatureView" customModule="FirebaseStarterApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -55,7 +54,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="3mD-5h-X9B"/>
             <point key="canvasLocation" x="494.92753623188412" y="145.98214285714286"/>
