--- a/FirebaseStarterApp/ViewControllers/ATCClassicLandingScreenViewController.xib
+++ b/FirebaseStarterApp/ViewControllers/ATCClassicLandingScreenViewController.xib
@@ -46,29 +46,29 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WwR-b9-CIN" userLabel="Login Button">
-                            <rect key="frame" x="50" y="293.5" width="275" height="55"/>
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WwR-b9-CIN" userLabel="Login Button">
+                            <rect key="frame" x="50" y="305.5" width="275" height="55"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="55" id="vGd-22-DK9"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BGN-m2-Ekx" userLabel="Sign Up Button">
-                            <rect key="frame" x="50" y="371.5" width="275" height="55"/>
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BGN-m2-Ekx" userLabel="Sign Up Button">
+                            <rect key="frame" x="50" y="426.5" width="275" height="55"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="55" id="9LN-nb-fDP"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                         </button>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wo2-e7-7lU" userLabel="image" customClass="FLAnimatedImageView">
-                            <rect key="frame" x="117" y="559" width="141" height="78"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                        </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RWX-SA-6LU">
-                            <rect key="frame" x="106" y="482" width="162" height="30"/>
+                            <rect key="frame" x="357" y="-1" width="15" height="23"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Button"/>
                         </button>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wo2-e7-7lU" userLabel="image" customClass="FLAnimatedImageView">
+                            <rect key="frame" x="357" y="0.0" width="17" height="13"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
