--- a/FirebaseStarterApp/ViewControllers/ATCPrincipalController.xib
+++ b/FirebaseStarterApp/ViewControllers/ATCPrincipalController.xib
@@ -6,6 +6,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Carnas.otf">
+            <string>Carnas-Medium</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ATCPrincipalController" customModule="FirebaseStarterApp" customModuleProvider="target">
             <connections>
@@ -23,36 +28,52 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Hc-kO-nyi">
-                    <rect key="frame" x="0.0" y="48" width="375" height="200"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinY="YES" flexibleMaxY="YES"/>
-                    <viewLayoutGuide key="contentLayoutGuide" id="itr-JL-ga2"/>
-                    <viewLayoutGuide key="frameLayoutGuide" id="iCl-kT-Qgb"/>
-                </scrollView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MZq-RP-WqY" userLabel="BeneficiosButton">
-                    <rect key="frame" x="38" y="339" width="154" height="94"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="194" y="325" width="165" height="88"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="Carnas-Medium" family="Carnas" pointSize="19"/>
                     <state key="normal" title="Beneficios"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TG0-n7-tir" userLabel="MenuButton">
-                    <rect key="frame" x="200" y="339" width="154" height="94"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                    <state key="normal" title="Menú"/>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oqn-mW-X6E" userLabel="RadioScharffButton">
-                    <rect key="frame" x="38" y="489" width="154" height="94"/>
+                    <rect key="frame" x="16" y="469" width="160" height="81"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="Carnas-Medium" family="Carnas" pointSize="19"/>
                     <state key="normal" title="Radio Scharff"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z7l-xB-OzI" userLabel="PorsiacaButton">
-                    <rect key="frame" x="205" y="489" width="154" height="94"/>
+                    <rect key="frame" x="194" y="469" width="165" height="81"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="Carnas-Medium" family="Carnas" pointSize="19"/>
                     <state key="normal" title="Enviar Notificación"/>
                 </button>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Hc-kO-nyi">
+                    <rect key="frame" x="334" y="0.0" width="25" height="19"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                    <viewLayoutGuide key="contentLayoutGuide" id="itr-JL-ga2"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="iCl-kT-Qgb"/>
+                </scrollView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="TopPrincipal" translatesAutoresizingMaskIntoConstraints="NO" id="FrX-qi-dw0">
+                    <rect key="frame" x="-10" y="53" width="385" height="67"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="scrollex" translatesAutoresizingMaskIntoConstraints="NO" id="vbO-4m-3RJ">
+                    <rect key="frame" x="0.0" y="130" width="375" height="163"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TG0-n7-tir" userLabel="MenuButton">
+                    <rect key="frame" x="16" y="325" width="160" height="88"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" name="Carnas-Medium" family="Carnas" pointSize="19"/>
+                    <state key="normal" title="Menú"/>
+                </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="132" y="94.902548725637189"/>
         </view>
     </objects>
+    <resources>
+        <image name="TopPrincipal" width="364" height="52"/>
+        <image name="scrollex" width="409" height="237"/>
+    </resources>
 </document>
